# Interpreter

./: .gitignore  CMakeLists.txt  README.md  constans.h  error.h  object.cpp  object.h  parser.cpp  parser.h  scheme.cpp  scheme.h  sources.cmake  tokenizer.cpp  tokenizer.h
cmake/: TestSolution.cmake
repl/: main.cpp
tests/: test_lambda.cpp
